--- a/shell/app/config-page/components/issue-kanban.scss
+++ b/shell/app/config-page/components/issue-kanban.scss
@@ -95,6 +95,16 @@
       opacity: 0.5;
     }
 
+    .dragged-card {
+      animation: changeCardBg 1s linear 0.3s;
+    }
+
+    @keyframes changeCardBg {
+      50% {
+        background-color: rgba($color-purple-deep, 0.1);
+      }
+    }
+
     .list-item {
       margin-bottom: 12px;
       background-color: $white;
