Feature/Added r&d performance task statistics page (#2221)
* fix: normal branch name display

* feat: update contractive filter style

* feat: add text block group config-page component

* feat: add simple chart config-page component

* feat: add chart block component in config-page

* feat: export filter as default

* feat: update color variables and add two bg color util class

* feat: support Wrapper in config page render

* feat: add task summary page

* feat: support pass className to echart dom

* feat: add pic-chart mock data

* feat: update card container mock data

* feat: support pass className to contractive filter

* feat: add pure bg-white class to container component

* feat: update simple chart style

* feat: update task summary config page

* feat: update chart block component

* feat: radio support visible props

* feat: simple chart support compare value show different color text

* feat: update color to new function color

* fix: remove useMock

--- a/shell/app/common/components/contractive-filter/index.scss
+++ b/shell/app/common/components/contractive-filter/index.scss
@@ -33,10 +33,11 @@
   .contractive-filter-item {
     display: flex;
     align-items: center;
-    padding: 4px 0 4px 8px;
+    padding: 4px 2px 4px 8px;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.1s ease-out;
+    background-color: $color-default-06;
 
     &-value {
       max-width: 180px;
@@ -54,17 +55,17 @@
     }
 
     &:hover {
-      background-color: $whitesmoke;
+      background-color: $color-default-1;
 
       i {
-        color: $gray;
+        color: $black;
       }
 
       .hover {
         svg {
           path {
-            stroke: $gray;
-            fill: $gray;
+            stroke: $black;
+            fill: $black;
           }
         }
       }
@@ -125,7 +126,7 @@
   }
 
   .options-item {
-    color: $color-dark-65;
+    color: $color-dark-6;
   }
 
   .options-container {
