--- a/shell/app/config-page/components/simple-chart/simple-chart.scss
+++ b/shell/app/config-page/components/simple-chart/simple-chart.scss
@@ -11,33 +11,15 @@
 // You should have received a copy of the GNU Affero General Public License
 // along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-const mockData: Array<MockSpec<CP_CARD_CONTAINER.Spec>> = [
-  {
-    _meta: {
-      title: 'CardContainer',
-      desc: '卡片容器',
-    },
-    type: 'CardContainer',
-    props: {
-      visible: true,
-      title: 'title',
-      tip: 'tip text',
-      style: {},
-    },
-  },
-  {
-    _meta: {
-      title: 'ChartContainer',
-      desc: '图表容器',
-    },
-    type: 'ChartContainer',
-    props: {
-      visible: true,
-      title: 'title',
-      tip: 'tip text',
-      style: {},
-    },
-  },
-];
+.cp-simple-chart {
+  background: $color-default-02;
 
-export default mockData;
+  .erda-text-block-info {
+    width: 88px;
+    margin-right: 8px;
+  }
+
+  .chart-dom {
+    min-height: 56px;
+  }
+}
