--- a/shell/app/views/index.ejs
+++ b/shell/app/views/index.ejs
@@ -62,8 +62,7 @@
   <!-- layout -->
   <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_1776_8.ba89731a7541ef588c93a4ace53a6b3d.es5.js" ></script>
   <!-- dice iconpark -->
-  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_256.04dd1ef7ac4971bb6569c7d0bd58317e.es5.js
-"></script>
+  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_264.848d79b4e00fca18b5d2fd89afcb47e0.es5.js"></script>
   <!-- $ -->
 </body>
 
