fix(dop): issue table filter close icon color bug

--- a/shell/app/common/components/contractive-filter/index.scss
+++ b/shell/app/common/components/contractive-filter/index.scss
@@ -78,12 +78,8 @@
     left: -6px;
     z-index: 2;
     display: none;
-    color: $lightgray;
+    color: rgba($color-default, 0.4);
     cursor: pointer;
-
-    &:hover {
-      color: $gray;
-    }
   }
 
   .ant-input {
