--- a/shell/app/layout/pages/page-container/components/sub-sidebar.scss
+++ b/shell/app/layout/pages/page-container/components/sub-sidebar.scss
@@ -39,6 +39,7 @@
 .side-nav-menu {
   transition: width 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
   scrollbar-width: 0;
+  background-color: $white;
   .menu-container {
     .fold {
       height: auto;
