--- a/shell/app/styles/app.scss
+++ b/shell/app/styles/app.scss
@@ -53,6 +53,7 @@ html body {
   font-family: 'Roboto-Regular', 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue',
     Arial, sans-serif;
   line-height: 18px;
+  background-color: $color-bg;
 }
 
 html body[lang='en'] {
