--- a/shell/app/config-page/components/gantt/components/task-item/project/project.scss
+++ b/shell/app/config-page/components/gantt/components/task-item/project/project.scss
@@ -4,8 +4,7 @@
 }
 
 .erda-gantt-project-background {
-  user-select: none;
-  opacity: 0.6;
+  border-radius: 12px;
 }
 
 .erda-gantt-project-top {
