--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -14,6 +14,7 @@ $navy: #333333 !default;
 $gray: #666666 !default;
 $darkgray: #999999 !default;
 $lightgray: #bbbbbb !default;
+$lightblue: #d1dcff !default;
 $lightnavy: #ccd0d6 !default;
 $gainsboro: #d9dce4 !default;
 $platinum: #e8e8e8 !default;
