fix: remove labels and status in kanban

--- a/shell/app/config-page/components/issue-kanban.scss
+++ b/shell/app/config-page/components/issue-kanban.scss
@@ -51,6 +51,7 @@
     .issue-kanban-label-input {
       padding-left: 0;
       border: 1px solid transparent;
+      background: transparent;
 
       &:hover {
         border: 1px solid $primary;
