fix: delete useless

--- a/shell/app/config-page/components/gantt/components/gantt/gantt.scss
+++ b/shell/app/config-page/components/gantt/components/gantt/gantt.scss
@@ -1,6 +1,7 @@
 .erda-gantt-vertical-container {
   overflow: hidden;
   margin: 0;
+  font-size: 0;
   padding: 0;
   background-color: $color-dark-02;
 }
