--- a/shell/app/views/index.ejs
+++ b/shell/app/views/index.ejs
@@ -62,7 +62,8 @@
   <!-- layout -->
   <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_1776_8.ba89731a7541ef588c93a4ace53a6b3d.es5.js" ></script>
   <!-- dice iconpark -->
-  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_264.848d79b4e00fca18b5d2fd89afcb47e0.es5.js"></script>
+  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_267.3cffb4eed4e2f0074b0e256d4b8f2b2a.es5.js
+"></script>
   <!-- $ -->
 </body>
 
