fix: fix container style

--- a/shell/app/config-page/components/container/container.scss
+++ b/shell/app/config-page/components/container/container.scss
@@ -55,6 +55,9 @@
           &:first-child {
             margin-top: 0;
           }
+          &.top-button-group + div {
+            margin-top: 0;
+          }
         }
       }
     }
