feat(common): fix radio solid button style

--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -523,10 +523,17 @@ body {
       &:not(:last-child) {
         border-right-width: 0;
       }
+
       &:not(:first-child)::before {
         height: 12px;
         top: calc(50% - 6px);
         padding: 0;
+      }
+
+      &.ant-radio-button-wrapper-checked {
+        &:before {
+          display: none;
+        }
       }
     }
   }
