--- a/shell/app/config-page/components/gantt/components/grid/grid.scss
+++ b/shell/app/config-page/components/gantt/components/grid/grid.scss
@@ -48,7 +48,9 @@
 }
 
 .erda-gantt-grid-today {
-  fill: $red;
+  // fill: $red;
+  stroke: $red;
+  fill: transparent;
 }
 
 .erda-gantt-grid-arrow-box {
