fix: can not create mobile app when tthere is no cluster in the project

--- a/shell/app/modules/project/pages/apps/app-type-select.scss
+++ b/shell/app/modules/project/pages/apps/app-type-select.scss
@@ -33,6 +33,12 @@
       background-color: $white;
     }
 
+    &.disabled-card {
+      &:hover {
+        background-color: rgba($black, 0.04);
+      }
+    }
+
     &.active {
       background-color: $white;
 
