--- a/shell/app/views/index.ejs
+++ b/shell/app/views/index.ejs
@@ -53,9 +53,8 @@
   <!-- layout -->
   <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_1776_8.ba89731a7541ef588c93a4ace53a6b3d.es5.js" ></script>
   <!-- dice iconpark -->
-  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_269.1e666f997da578c577ff5a2d85160671.es5.js
-"></script>
+  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_270.4910632bc87bb7bfb9debaaed382b0c8.es5.js"></script>
   <!-- $ -->
-</body>
+</body>ß
 
 </html>
