fix(common): configurable filter placeholder bug

--- a/shell/app/common/components/configurable-filter/index.scss
+++ b/shell/app/common/components/configurable-filter/index.scss
@@ -108,6 +108,10 @@
     }
   }
 
+  .ant-select-selection-placeholder {
+    color: rgba($white, 0.3);
+  }
+
   .add-filter-config.ant-popover-open {
     background-color: $color-white-2;
   }
