--- a/shell/app/common/components/configurable-filter/index.scss
+++ b/shell/app/common/components/configurable-filter/index.scss
@@ -3,8 +3,23 @@
 
   &.ant-popover-open {
     color: $white;
-    background-color: $color-default;
+    background-color: $color-default !important;
   }
+
+  .ant-badge-dot {
+    box-shadow: none !important;
+  }
+}
+
+.erda-config-filter-btn-active {
+  .erda-configurable-filter-btn {
+    color: $white;
+    background-color: $color-default !important;
+  }
+}
+
+.erda-configurable-filter-clear-btn {
+  background-color: rgba($color-default, 0.06);
 }
 
 .erda-configurable-filter {
@@ -91,6 +106,10 @@
     &-operation {
       width: 120px;
     }
+  }
+
+  .ant-select-selection-placeholder {
+    color: rgba($white, 0.3);
   }
 
   .add-filter-config.ant-popover-open {
@@ -215,6 +234,15 @@
       .anticon-check {
         color: $color-purple-highlight;
       }
+
+      .ant-select-item-option-grouped {
+        padding-left: 24px !important;
+      }
+
+      .ant-select-item-group {
+        color: rgba($white, 0.6);
+        font-weight: bold;
+      }
     }
 
     .ant-select-arrow {
@@ -296,7 +324,8 @@
   }
 
   .erda-badge-status-default {
-    color: $color-white-8;
+    color: $white;
+    background-color: $color-white-1;
   }
 
   &-footer {
