feat(msp): refactor service list & service overview

--- a/shell/app/modules/msp/env-overview/service-list/pages/index.scss
+++ b/shell/app/modules/msp/env-overview/service-list/pages/index.scss
@@ -20,3 +20,14 @@
     }
   }
 }
+
+.service-overview {
+  &-topology {
+    background: $color-default;
+    height: 320px;
+
+    .topology-wrapper {
+      height: 272px;
+    }
+  }
+}
