optimize service list & refactor service overview (#2300)
* feat(msp): add data rank

feat(common): add data rank comp

feat(common): add data rank comp

feat(msp): add topn to services

* feat(msp): refactor service list & service overview

* feat(msp): add empty holder for top-n

feat(msp): refactor service list & service overview

feat(msp): fix toppology params

* feat(msp): filter topology

* feat(msp): fix code after cr

--- a/shell/app/modules/msp/env-overview/service-list/pages/index.scss
+++ b/shell/app/modules/msp/env-overview/service-list/pages/index.scss
@@ -20,3 +20,14 @@
     }
   }
 }
+
+.service-overview {
+  &-topology {
+    background: $color-default;
+    height: 420px;
+
+    .topology-wrapper {
+      height: 372px;
+    }
+  }
+}
