--- a/shell/app/common/components/table/index.scss
+++ b/shell/app/common/components/table/index.scss
@@ -174,6 +174,10 @@
   line-height: 50px;
   background-color: $color-table-head-bg;
 
+  &-content {
+    line-height: 1.2;
+  }
+
   .filter-group-bar {
     margin-bottom: 0;
   }
