fix(common): configurrable filter clear text position bug (#2325)

--- a/shell/app/common/components/configurable-filter/index.scss
+++ b/shell/app/common/components/configurable-filter/index.scss
@@ -220,7 +220,7 @@
     .ant-select {
       .ant-select-clear {
         right: 0;
-        top: -50%;
+        top: -1rem;
         width: auto;
         color: $color-purple-highlight;
         background-color: transparent;
