--- a/shell/app/common/components/configurable-filter/index.scss
+++ b/shell/app/common/components/configurable-filter/index.scss
@@ -268,6 +268,10 @@
       margin: 0;
       border-color: transparent !important;
       background-color: rgba($white, 0.08) !important;
+
+      .ant-select-selection-search {
+        margin-left: 0;
+      }
     }
 
     .erda-form-date-range {
