--- a/shell/app/common/components/base-list/index.scss
+++ b/shell/app/common/components/base-list/index.scss
@@ -1,5 +1,5 @@
-.erda-list {
-  &-item {
+.erda-base-list {
+  .erda-base-list-item {
     padding: 12px 16px;
     border-radius: 2px;
     background-color: $white;
@@ -11,7 +11,7 @@
       border-bottom: none;
     }
 
-    &-prefix-img {
+    .item-prefix-img {
       margin-right: 12px;
       line-height: 1;
 
@@ -53,7 +53,7 @@
 
     .body-meta-info {
       line-height: 20px;
-      color: $color-text-desc;
+      color: $color-text-sub;
 
       .info-item {
         display: inline-flex;
@@ -63,7 +63,7 @@
         font-size: 12px;
 
         &.type-normal {
-          color: $color-text-desc;
+          color: $color-text-sub;
         }
 
         &.type-success {
