--- a/shell/app/common/components/table/index.scss
+++ b/shell/app/common/components/table/index.scss
@@ -139,7 +139,7 @@
     }
 
     .ant-form-item {
-      margin-bottom: 0 !important;
+      margin: 2px 0 !important;
     }
 
     .no-label .ant-form-item-label {
