--- a/shell/app/config-page/components/scale-card/scale-card.scss
+++ b/shell/app/config-page/components/scale-card/scale-card.scss
@@ -13,6 +13,7 @@
     border-radius: 44px;
     cursor: pointer;
     transition: width 0.3s cubic-bezier(0.48, 0.43, 0.29, 1.3);
+
     .icon-wrap {
       position: relative;
       width: 20px;
@@ -23,22 +24,22 @@
         left: 0;
         transition: opacity 0.3s cubic-bezier(0.48, 0.43, 0.29, 1.3);
       }
-      .normal-icon {
-        opacity: 1;
-      }
       .active-icon {
         opacity: 0;
       }
     }
+
     .text {
       margin-left: 12px;
       opacity: 0;
       font-weight: 500;
     }
+
     &:hover {
-      width: 150px;
+      width: 154px;
       .text {
         opacity: 1;
+        color: $color-purple-highlight;
       }
       .normal-icon {
         opacity: 0;
