--- a/shell/app/modules/msp/env-overview/topology/pages/topology/component/progress/index.scss
+++ b/shell/app/modules/msp/env-overview/topology/pages/topology/component/progress/index.scss
@@ -8,3 +8,11 @@
     transform: translate(3px, 4px) scale(0.95);
   }
 }
+
+.shadow-wrapper {
+  z-index: -1;
+
+  .shadow {
+    background: $color-default;
+  }
+}
