feat: add scene empty holder

--- a/shell/app/common/components/empty-holder/index.scss
+++ b/shell/app/common/components/empty-holder/index.scss
@@ -40,3 +40,21 @@
     text-align: center;
   }
 }
+
+.scene-empty-holder {
+  padding: 32px 24px;
+
+  img {
+    width: 100px;
+    height: 80px;
+  }
+
+  .title {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .desc {
+    font-size: 12px;
+    line-height: 20px;
+  }
+}
