feat: position today in gantt initial

--- a/shell/app/modules/project/pages/issue/gantt/index.scss
+++ b/shell/app/modules/project/pages/issue/gantt/index.scss
@@ -75,3 +75,15 @@
     }
   }
 }
+
+// .full-gantt {
+//   position: fixed;
+//   top: 0;
+//   left: 48px;
+//   width: calc(100% - 48px);
+//   height: 100%;
+//   overflow: auto;
+//   background: $white;
+//   z-index: 100;
+//   padding: 40px;
+// }
