--- a/shell/app/modules/msp/env-overview/topology/pages/topology/component/nodes/index.scss
+++ b/shell/app/modules/msp/env-overview/topology/pages/topology/component/nodes/index.scss
@@ -1,3 +1,30 @@
+$suction-shadow: 0 0 0 rgba($color-error, 0);
+$exhale-shadow: 0 0 20px rgba($color-error, 0.9);
+
+@keyframes service-node-animation {
+  0% {
+    box-shadow: $suction-shadow;
+  }
+  50% {
+    box-shadow: $exhale-shadow;
+  }
+  100% {
+    box-shadow: $suction-shadow;
+  }
+}
+
+@keyframes addon-node-animation {
+  0% {
+    filter: drop-shadow($suction-shadow);
+  }
+  50% {
+    filter: drop-shadow($exhale-shadow);
+  }
+  100% {
+    filter: drop-shadow($suction-shadow);
+  }
+}
+
 .service-node {
   width: 76px;
   height: 76px;
@@ -22,8 +49,6 @@
   }
 
   &.error {
-    border-color: rgba(216, 75, 101, 0.2);
-
     &:hover {
       &:before {
         content: '';
@@ -36,6 +61,22 @@
         border-radius: 50%;
         border: 1px dotted #d84b65;
       }
+    }
+  }
+
+  &.has-error {
+    border-color: transparent;
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      border-radius: 50%;
+      animation: service-node-animation 2s infinite ease-in-out;
     }
   }
 }
@@ -56,5 +97,13 @@
   .unit {
     transform: scale(0.9);
     transform-origin: center;
+  }
+}
+
+.addon-node {
+  &.has-error {
+    .shadow-wrapper {
+      animation: addon-node-animation 2s infinite ease-in-out;
+    }
   }
 }
