feat(common): add common components listSelect

--- a/shell/app/config-page/components/table/table.scss
+++ b/shell/app/config-page/components/table/table.scss
@@ -86,6 +86,10 @@
     }
   }
 
+  td:hover .text-hover {
+    color: $color-purple-highlight;
+  }
+
   &.no-border {
     td {
       border: none;
