fix: add persnal workbench

--- a/shell/app/common/components/badge/index.scss
+++ b/shell/app/common/components/badge/index.scss
@@ -1,4 +1,7 @@
 .erda-badge {
+  .erda-badge-status-text {
+    word-break: keep-all;
+  }
   .erda-badge-status-dot {
     border-radius: 50%;
     position: relative;
