--- a/shell/app/common/components/badge/index.scss
+++ b/shell/app/common/components/badge/index.scss
@@ -1,4 +1,11 @@
 .erda-badge {
+  &.only-dot {
+    background-color: transparent !important;
+    padding: 0 4px 0 0 !important;
+    .erda-badge-status-dot {
+      margin-right: 0 !important;
+    }
+  }
   .erda-badge-status-text {
     word-break: keep-all;
   }
