--- a/shell/app/org-home/pages/personal-home-v1.scss
+++ b/shell/app/org-home/pages/personal-home-v1.scss
@@ -10,30 +10,21 @@
 //
 // You should have received a copy of the GNU Affero General Public License
 // along with this program. If not, see <http://www.gnu.org/licenses/>.
+.home-page {
+  position: relative;
+  display: flex;
+  height: 100%;
+  overflow: hidden;
 
-declare namespace CP_SCALE_CARD {
-  interface Spec {
-    type: 'ScaleCard';
-    operations?: Obj<CP_COMMON.Operation>;
-    data: IData;
-    onClick?: (v: Item) => void;
-    props: IProps;
+  .home-page-sidebar {
+    width: 320px;
+    height: 100%;
+    background-color: $color-bg;
   }
 
-  interface IProps {
-    align: 'left' | 'right';
+  .home-page-content {
+    height: 100%;
+    margin: 0 20px;
+    overflow: auto;
   }
-
-  interface IData {
-    list: Item[];
-  }
-
-  interface Item {
-    icon: string;
-    label: string;
-    operations?: Obj<CP_COMMON.Operation>;
-    [pro: string]: any;
-  }
-
-  type Props = MakeProps<Spec>;
 }
