feat(msp): each chart is requested independently

--- a/shell/app/modules/msp/env-overview/service-list/pages/index.scss
+++ b/shell/app/modules/msp/env-overview/service-list/pages/index.scss
@@ -24,7 +24,10 @@
 .service-overview {
   &-topology {
     background: $color-default;
-    height: 420px;
+
+    &.fixed-height {
+      height: 420px;
+    }
 
     .topology-wrapper {
       height: 372px;
