--- a/shell/app/modules/project/pages/issue/gantt/index.scss
+++ b/shell/app/modules/project/pages/issue/gantt/index.scss
@@ -75,3 +75,15 @@
     }
   }
 }
+
+.gantt-fullscreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  padding: 32px;
+  background: $white;
+  z-index: 100;
+}
