--- a/shell/app/common/components/base-list/index.scss
+++ b/shell/app/common/components/base-list/index.scss
@@ -3,12 +3,19 @@
     padding: 12px 16px;
     border-radius: 2px;
     background-color: $white;
-    box-shadow: 0 1px 4px 0 rgba($color-default, 0.16);
+    border-bottom: 1px solid $border-color;
     background-position: 100% 0;
     background-repeat: no-repeat;
 
+    .erda-base-list-item-hover-icons {
+      display: none;
+    }
+
     &:hover {
-      box-shadow: 0 2px 8px 0 rgba($color-default, 0.16);
+      background-color: $color-table-bg-hover;
+      .erda-base-list-item-hover-icons {
+        display: block;
+      }
     }
 
     &:last-child {
