--- a/shell/app/styles/util.scss
+++ b/shell/app/styles/util.scss
@@ -357,3 +357,75 @@
 .bg-color-01 {
   background-color: $color-default-01;
 }
+
+.scroll-bar-dark {
+  &::-webkit-scrollbar {
+    width: 16px;
+    height: 16px;
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-corner {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 4px solid transparent;
+    box-shadow: 8px 0 0 rgba($white, 0.2) inset;
+
+    &:hover {
+      box-shadow: 8px 0 0 rgba($white, 0.4) inset;
+    }
+
+    &:horizontal {
+      box-shadow: 0 8px 0 rgba($white, 0.2) inset;
+
+      &:hover {
+        box-shadow: 0 8px 0 rgba($white, 0.4) inset;
+      }
+    }
+  }
+}
+
+.scroll-bar-light {
+  &::-webkit-scrollbar {
+    width: 16px;
+    height: 16px;
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-corner {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 4px solid transparent;
+    box-shadow: 8px 0 0 rgba($color-default, 0.2) inset;
+
+    &:hover {
+      box-shadow: 8px 0 0 rgba($color-default, 0.4) inset;
+    }
+
+    &:horizontal {
+      box-shadow: 0 8px 0 rgba($color-default, 0.2) inset;
+
+      &:hover {
+        box-shadow: 0 8px 0 rgba($color-default, 0.4) inset;
+      }
+    }
+  }
+}
+// hack for safari
+:not(:root):-webkit-full-screen {
+  height: 100%;
+}
