--- a/shell/app/common/components/table/index.scss
+++ b/shell/app/common/components/table/index.scss
@@ -32,7 +32,7 @@
   }
 
   .bg-hover:hover {
-    background-color: $color-bg-gray;
+    background-color: $color-default-06;
 
     &:not(.disabled) {
       cursor: pointer;
