--- a/shell/app/modules/project/pages/release/components/form.scss
+++ b/shell/app/modules/project/pages/release/components/form.scss
@@ -11,7 +11,7 @@
   }
 
   input {
-    background-color: $color-default-04;
+    background-color: $color-default-04 !important;
     border: none;
   }
 }
