--- a/shell/app/layout/pages/page-container/components/shell/index.scss
+++ b/shell/app/layout/pages/page-container/components/shell/index.scss
@@ -1,8 +1,10 @@
 .erda-shell {
+  display: flex;
   height: 100%;
   width: 100%;
 
   .erda-main-content {
     flex: auto;
+    margin-right: 16px;
   }
 }
