--- a/shell/app/layout/pages/page-container/page-container.scss
+++ b/shell/app/layout/pages/page-container/page-container.scss
@@ -3,14 +3,14 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding: 12px;
+  // padding: 0 16px 16px;
   overflow: auto;
 }
 
 @media screen and (max-width: 1024px) {
-  #main {
-    padding: 8px;
-  }
+  // #main {
+  //   padding: 0 8px 8px;
+  // }
 
   .skeleton-header {
     padding: 16px 12px 15px;
